# multi-platform-screen-grabber

./: Cargo.toml  MULTY-PLATTFOMR_SCREEN_GRABBER.pptx  README.md
src/: choice.rs  enums.rs  hotkeys.rs  image_handler.rs  lib.rs  main.rs  screenshot.rs
src/ui/: home.rs  modify.rs  settings.rs
